test/asm/const-zero.err
error: const-zero.asm(21) -> const-zero.asm::test_or(14):
    Expected constant expression: PC is not constant at assembly time
error: Assembly aborted (1 error)!
